# stripe-payment

./: .gitignore  README.md  pyproject.toml
stripe_payment/: .notes.md
stripe_payment/config/: settings.py  urls.py
stripe_payment/payment_app/: models.py  stripe_service.py  urls.py  views.py
stripe_payment/payment_app/management/commands/: create_items.py
stripe_payment/payment_app/migrations/: 0001_initial.py
stripe_payment/payment_app/templates/payment_app/: cancel.html  checkout.html  success.html
