[tool.poetry]
name = "stripe-payment"
version = "0.1.0"
description = ""
authors = ["Alexander <job.nullptr@gmail.com>"]
readme = "README.md"
packages = [{include = "stripe_payment"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
stripe = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
